--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <li><i class="far fa-calendar-alt"></i>1990.11.19 (만30세)</li>
                 <li><i class="far fa-map"></i>서울 공항동 거주</li>
                 <br>
-                <li><i class="far fa-meh-blank"></i>컴퓨터 최적화 화면</li>
+                <li><i class="far fa-meh-blank"></i>컴퓨터 최적화 화면&nbsp;<i class="far fa-meh-blank"></i></li>
             </ul>
         </div>
         <div class="right_box">
@@ -270,7 +270,11 @@
                     <div class="pf_gosite">
                         <a href="https://www.youtube.com/embed/vkHmrW31L7Q"
                         class="portfolio_btn">▶ PLAY</a>
-
+                    </div>
+                    <div class="thumb">
+                        <img src="img/0.jpg" width="200" alt="">
+                        &nbsp;&nbsp;&nbsp;
+                        <img src="img/0.jpg" width="200" alt="">
                     </div>
                 </div>
             </div>
