--- a/index.html
+++ b/index.html
@@ -255,16 +255,16 @@
                     <h3 class="pf_title">NEW BALANCE 21'F/W CTA</h3>
                     <table>
                         <tr>
-                            <td class="pf_name">TITLE :</td>
-                            <td class="pf_txt"><h3>NEW BALANCE 21' F/W PROMOTION</h3></td>
+                            <td class="pf_name">TITLE (R/T) :</td>
+                            <td class="pf_txt"><h3>NEW BALANCE 21' F/W PROMOTION / (22s)</h3></td>
                         </tr>
                         <tr>
-                            <td class="pf_name">Work & Running TIME :</td>
-                            <td class="pf_txt"><h3>2021.09 1주 / 22s</h3></td>
-                        </tr>
-                        <tr>
-                            <td class="pf_name">Used tool :</td>
+                            <td class="pf_name">Used Tool :</td>
                             <td class="pf_txt"><h3>Premier Pro / After Effects / Photoshop</h3></td>
+                        </tr>
+                        <tr>
+                            <td class="pf_name">About Design :</td>
+                            <td class="pf_txt"><h3>창작 50% 모작 50%</h3></td>
                         </tr>
                     </table>
                     <div class="pf_gosite">
@@ -280,22 +280,22 @@
                         <!-- 두번째 영상 -->
                         <div class="slide">
                             <div class="image">
-                                <img src="img/0.jpg" alt="영상사진">
+                                <img src="img/SPOTV_main.jpg" alt="영상사진">
                             </div>
                             <div class="pf_txt_container">
-                                <h3 class="pf_title">SPORTS 방송 LINE-UP</h3>
+                                <h3 class="pf_title">SPORTS 방송 SPOTV EPL LINE-UP</h3>
                                 <table>
                                     <tr>
-                                        <td class="pf_name">프로젝트명 :</td>
-                                        <td class="pf_txt"><h3>SPOTV 생중계</h3></td>
+                                        <td class="pf_name">TITLE (R/T):</td>
+                                        <td class="pf_txt"><h3>SPORTS 방송 SPOTV EPL LINE-UP (43s)</h3></td>
                                     </tr>
                                     <tr>
-                                        <td class="pf_name">제작소요기간 :</td>
-                                        <td class="pf_txt"><h3>2021.06 2주</h3></td>
+                                        <td class="pf_name">Used Tool :</td>
+                                        <td class="pf_txt"><h3>Premier Pro / After Effects / Photoshop</h3></td>
                                     </tr>
                                     <tr>
-                                        <td class="pf_name">설명 :</td>
-                                        <td class="pf_txt"><h3>영상에 대한 설명 내용입니다.</h3></td>
+                                        <td class="pf_name">About Design :</td>
+                                        <td class="pf_txt"><h3>창작 70% 모작 30%</h3></td>
                                     </tr>
                                 </table>
                                 <div class="pf_gosite">
@@ -303,30 +303,30 @@
                                     class="portfolio_btn">▶ PLAY</a>
                                 </div>
                                 <div class="thumb">
-                                    <img src="img/0.jpg" width="200" alt="">&nbsp;&nbsp;&nbsp;
-                                    <img src="img/0.jpg" width="200" alt="">
+                                    <img src="img/SPOTV_s01.jpg" width="200" alt="">&nbsp;&nbsp;&nbsp;
+                                    <img src="img/SPOTV_s02.jpg" width="200" alt="">
                                 </div>
                             </div>
                         </div>
                                 <!-- 세번째 영상 -->
                                 <div class="slide">
                                     <div class="image">
-                                        <img src="img/0.jpg" alt="영상사진">
+                                        <img src="img/TH_main.jpg" alt="영상사진">
                                     </div>
                                     <div class="pf_txt_container">
                                         <h3 class="pf_title">TOMMY HILFIGER 21'F/W CTA</h3>
                                         <table>
                                             <tr>
-                                                <td class="pf_name">프로젝트명 :</td>
-                                                <td class="pf_txt"><h3>테스트 프로젝트 입니다.</h3></td>
+                                                <td class="pf_name">TITLE (R/T) :</td>
+                                                <td class="pf_txt"><h3>TOMMY HILFIGER 21'F/W PROMOTION (30s)</h3></td>
                                             </tr>
                                             <tr>
-                                                <td class="pf_name">제작소요기간 :</td>
-                                                <td class="pf_txt"><h3>2021.06 2주</h3></td>
+                                                <td class="pf_name">Used Tool :</td>
+                                                <td class="pf_txt"><h3>Premier Pro / After Effects / Photoshop</h3></td>
                                             </tr>
                                             <tr>
-                                                <td class="pf_name">설명 :</td>
-                                                <td class="pf_txt"><h3>영상에 대한 설명 내용입니다.</h3></td>
+                                                <td class="pf_name">About Design :</td>
+                                                <td class="pf_txt"><h3>창작 60% 모작 40%</h3></td>
                                             </tr>
                                         </table>
                                         <div class="pf_gosite">
@@ -334,15 +334,15 @@
                                             class="portfolio_btn">▶ PLAY</a>
                                         </div>
                                         <div class="thumb">
-                                            <img src="img/0.jpg" width="200" alt="">&nbsp;&nbsp;&nbsp;
-                                            <img src="img/0.jpg" width="200" alt="">
+                                            <img src="img/TH_s01.jpg" width="200" alt="">&nbsp;&nbsp;&nbsp;
+                                            <img src="img/TH_s02.jpg" width="200" alt="">
                                         </div>
                                     </div>
                                 </div>
                                 <!-- 네번째 영상 -->
                                 <div class="slide">
                                     <div class="image">
-                                        <img src="img/0.jpg" alt="영상사진">
+                                        <img src="img/WT_main.jpg" alt="영상사진">
                                     </div>
                                     <div class="pf_txt_container">
                                         <h3 class="pf_title">카카오웹툰 지옥사원 트레일러</h3>
@@ -365,8 +365,8 @@
                                             class="portfolio_btn">▶ PLAY</a>
                                         </div>
                                         <div class="thumb">
-                                            <img src="img/0.jpg" width="200" alt="">&nbsp;&nbsp;&nbsp;
-                                            <img src="img/0.jpg" width="200" alt="">
+                                            <img src="img/WT_s01.jpg" width="200" alt="">&nbsp;&nbsp;&nbsp;
+                                            <img src="img/WT_s02.jpg" width="200" alt="">
                                         </div>
                                     </div>
                                 </div>
