--- a/index.html
+++ b/index.html
@@ -345,19 +345,19 @@
                                         <img src="img/WT_main.jpg" alt="영상사진">
                                     </div>
                                     <div class="pf_txt_container">
-                                        <h3 class="pf_title">카카오웹툰 지옥사원 트레일러</h3>
+                                        <h3 class="pf_title">Kakao WEBTOON 지옥사원 트레일러</h3>
                                         <table>
                                             <tr>
-                                                <td class="pf_name">프로젝트명 :</td>
-                                                <td class="pf_txt"><h3>테스트 프로젝트 입니다.</h3></td>
+                                                <td class="pf_name">TITLE (R/T) :</td>
+                                                <td class="pf_txt"><h3>카카오웹툰 지옥사원 트레일러 (59s)</h3></td>
                                             </tr>
                                             <tr>
-                                                <td class="pf_name">제작소요기간 :</td>
-                                                <td class="pf_txt"><h3>2021.06 2주</h3></td>
+                                                <td class="pf_name">Used Tool :</td>
+                                                <td class="pf_txt"><h3>Premier Pro / After Effects / Photoshop</h3></td>
                                             </tr>
                                             <tr>
-                                                <td class="pf_name">설명 :</td>
-                                                <td class="pf_txt"><h3>영상에 대한 설명 내용입니다.</h3></td>
+                                                <td class="pf_name">About Design :</td>
+                                                <td class="pf_txt"><h3>창작 80% 모작 20%</h3></td>
                                             </tr>
                                         </table>
                                         <div class="pf_gosite">
